--- a/bank.html
+++ b/bank.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Aanya National Bank Info</title>
+  <title>Bank of barcelona  Info</title>
   <link rel="icon" href="imgs/titleicone.png">
 
   <link rel="stylesheet" href="style.css">
@@ -78,7 +78,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: cyan">
     © 2021 Copyright:
-    <p class="love">This is Made by Aanya Tiwari</p>
+    <p class="love">This is Made by Aryan Singh</p>
     
   </div>
   <!-- Copyright -->
