--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Aanya National Bank</title>
+  <title>Bank of barcelona</title>
   <link rel="icon" href="imgs/titleicone.png">
 
   <link rel="stylesheet" href="style.css">
@@ -62,12 +62,12 @@
 
       <h1>
         <img src="imgs/bank1.jpg" width="100px" height="100px">
-        Welcome To Aanya  National Bank !!
+        Welcome To Bank of barcelona !!
         <img src="imgs/bank1.jpg" width="100px" height="100px">
       </h1>
     </div>
     <marquee style="background: rgb(5, 5, 5);"><b>
-        !! HELLO CUSTOMER !!........ !! WELCOME TO THE Aanya NATIONAL BANK !!........!! DO YOUR TRANSACTION FROM ANYWHERE
+        !! HELLO CUSTOMER !!........ !! WELCOME TO Bank of barcelona !!........!! DO YOUR TRANSACTION FROM ANYWHERE
         !!........!! THANK YOU !!
       </b></marquee>
   </section>
@@ -119,7 +119,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(214,230,255)">
     © 2021 Copyright:
-    <p class="love">This is Made  by Aanya Tiwari</p>
+    <p class="love">This is Made  by Aryan Singh</p>
   </div>
   <!-- Copyright -->
 
