--- a/customer.html
+++ b/customer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aanya  National Bank</title>
+    <title>Bank of barcelona</title>
     <link rel="icon" href="imgs/titleicone.png">
 
     <link rel="stylesheet"
