--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <div class="col-md-3 footer-grids w3l-agileits">
 
-      <a target="_blank" href="http://linkedin.com/in/aanyatiwari31"><i class="fa fa-linkedin"
+      <a target="_blank" href="https://www.linkedin.com/in/aryan-singh-84ab331bbg"><i class="fa fa-linkedin"
           aria-hidden="true"></i></a>
-      <a target="_blank" href="https://github.com/aanyatiwari31"><i class="fa fa-github"
+      <a target="_blank" href="https://github.com/10-aryan"><i class="fa fa-github"
           aria-hidden="true"></i></a><br>
 
     </div>
